[gd_scene load_steps=4 format=3 uid="uid://hfyae2h6k2ji"]

[ext_resource type="Texture2D" uid="uid://dg1s37be2427" path="res://assets/large_note.png" id="1_qt0ap"]
[ext_resource type="Script" uid="uid://xgahvl05c36h" path="res://scripts/objects/sample_projectile.gd" id="2_qt0ap"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqr3w"]
radius = 41.0

[node name="SampleProjectile" type="Sprite2D"]
texture = ExtResource("1_qt0ap")
script = ExtResource("2_qt0ap")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_aqr3w")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
